--- a/pet-web.html
+++ b/pet-web.html
@@ -5,12 +5,14 @@
   </head>
   <body>
     <h1>KING PETS</h1>
-    <p>Life is just boring without partners and sometimes you find true friendship from animals instead of man. Different people have diffent pets. Some have cats, dogs, parrots etc. So for kings level, I needed a pet worth my title,<strong>Dragons</strong></p>
+    <p>Life is just boring without partners and sometimes you find true friendship from animals instead of man. Different people have different pets. Some have cats, dogs, parrots etc. So for kings level, I needed a pet worth my title,<strong>Dragons</strong></p>
     <h2>Why Dragons</h2>
-    <p>Dragons are a wonderful creation with different beautiful species. They a good sence of hearing and sight that can enable them to get their meals while deep in the sky. They are also amazing when it comes to parenting. They spend at least three to four years with their young ones.</p>
-    <p>Below are reaasons why I choose dragons as King's pets</p>
+    <p>Dragons are a wonderful creation with different beautiful species. They have good sence of hearing and sight that can enable them to get their meals while deep in the sky. They are also amazing when it comes to parenting. They spend at least three to four years with their young ones.</p>
+    <p>Below are reasons why I choose dragons as King's pets</p>
     <ul>
-      <li></li>
+      <li>They are a Royal and Superior animal species.</li>
+      <li>They are friendly to man.</li>
+      <li>They barely require man's help for their survival, an <em>Indepedent</em> amimal type.</li>
     </ul>
   </body>
 </html>
