--- a/pet-web.html
+++ b/pet-web.html
@@ -12,7 +12,8 @@
     <ul>
       <li>They are a Royal and Superior animal species.</li>
       <li>They are friendly to man.</li>
-      <li>They barely require man's help for their survival, an <em>Indepedent</em> amimal type.</li>
+      <li>They barely require man's help for their survival, an <em>Indepedent</em> animal type.</li>
     </ul>
+    <p><a href="https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwiOvueL7__gAhUYBWMBHehIAe4QjRx6BAgBEAU&url=https%3A%2F%2Fwww.pixelstalk.net%2Fcool-dragon-hd-wallpaper-backgrounds-free-download%2F&psig=AOvVaw0F31ePsxW36_saGqGcCCRZ&ust=1552592268307359/">Royal Dragon</a></p>
   </body>
 </html>
