--- a/pet-web.html
+++ b/pet-web.html
@@ -5,9 +5,9 @@
   </head>
   <body>
     <h1>KING PETS</h1>
-    <p>Life is just boring without partners and sometimes you find true friendship from animals instead of man. Different people have different pets. Some have cats, dogs, parrots etc. So for kings level, I needed a pet worth my title,<strong>Dragons</strong></p>
+    <p>Life is just boring without partners and sometimes you find true friendship from animals instead of man. Different people have different pets.<br> Some have cats, dogs, parrots etc. So for kings level, I needed a pet worth my title,<strong>Dragons</strong></p>
     <h2>Why Dragons</h2>
-    <p>Dragons are a wonderful creation with different beautiful species. They have good sence of hearing and sight that can enable them to get their meals while deep in the sky. They are also amazing when it comes to parenting. They spend at least three to four years with their young ones.</p>
+    <p>Dragons are a wonderful creation with different beautiful species. They have good sence of hearing and sight that can enable them to get their <br>meals while deep in the sky. They are also amazing when it comes to parenting. They spend at least three to four years with their young ones.</p>
     <p>Below are reasons why I choose dragons as King's pets</p>
     <ul>
       <li>They are a Royal and Superior animal species.</li>
@@ -15,6 +15,6 @@
       <li>They barely require man's help for their survival, an <em>Indepedent</em> animal type.</li>
     </ul>
     <p><a href="https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwiOvueL7__gAhUYBWMBHehIAe4QjRx6BAgBEAU&url=https%3A%2F%2Fwww.pixelstalk.net%2Fcool-dragon-hd-wallpaper-backgrounds-free-download%2F&psig=AOvVaw0F31ePsxW36_saGqGcCCRZ&ust=1552592268307359/">Royal Dragon</a></p>
-    <img src="dragon-wallpaper-9.jpg" alt="A Royal dragon species"
+    <img src="dragon-wallpaper-9.jpg" width="800px" height="500px" alt="A Royal dragon species"
   </body>
 </html>
