internam css added

--- a/pet-web.html
+++ b/pet-web.html
@@ -3,6 +3,10 @@
   <head>
       <title>DRAGONS</title>
       <link  rel="stylesheet" href="style.css" type="text/css">
+      <style>
+        body{background-color: beige;}
+        h1{color: gold;}
+      </style>
   </head>
   <body>
     <h1>KING PETS</h1>
