--- a/pet-web.html
+++ b/pet-web.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link  rel="stylesheet" href="css/style.css" type="text/css">
       <title>DRAGONS</title>
-      <link  rel="stylesheet" href="style.css" type="text/css">
       <style>
         body{background-color: beige;}
         h1{color: gold;}
